<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pantallas.seriesDetail.SeriesDetailFragment">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/poster"
        app:layout_constraintBottom_toTopOf="@+id/guideCenter"
        app:layout_constraintEnd_toStartOf="@+id/guideVerticalCenter"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideLeft"
        app:layout_constraintTop_toTopOf="@+id/guideTop" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginStart="10dp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/textName"
        app:layout_constraintEnd_toStartOf="@+id/guideRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideVerticalCenter"
        app:layout_constraintTop_toTopOf="@+id/guideTop" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/gato"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/vote"
        app:layout_constraintEnd_toStartOf="@+id/guideRight"
        app:layout_constraintStart_toStartOf="@+id/guideVerticalCenter"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginStart="10dp"
        android:text="@string/vote_average"
        app:layout_constraintBottom_toTopOf="@+id/textVote"
        app:layout_constraintEnd_toStartOf="@+id/guideRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideVerticalCenter"
        app:layout_constraintTop_toBottomOf="@+id/textName" />

    <TextView
        android:id="@+id/textVote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/_5_5"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/date"
        app:layout_constraintEnd_toStartOf="@+id/guideRight"
        app:layout_constraintStart_toStartOf="@+id/guideVerticalCenter"
        app:layout_constraintTop_toBottomOf="@+id/vote" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginStart="10dp"
        android:text="@string/first_air_date"
        app:layout_constraintBottom_toTopOf="@+id/textDate"
        app:layout_constraintEnd_toStartOf="@+id/guideRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideVerticalCenter"
        app:layout_constraintTop_toBottomOf="@+id/textVote" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/_2020_01_01"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/guideCenter"
        app:layout_constraintEnd_toStartOf="@+id/guideRight"
        app:layout_constraintStart_toStartOf="@+id/guideVerticalCenter"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/overview"
        app:layout_constraintEnd_toStartOf="@+id/guideVerticalCenter"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/guideLeft"
        app:layout_constraintTop_toTopOf="@+id/guideCenter" />

    <TextView
        android:id="@+id/textOverview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/guideBottom"
        app:layout_constraintEnd_toStartOf="@+id/guideRight"
        app:layout_constraintStart_toStartOf="@+id/guideLeft"
        app:layout_constraintTop_toBottomOf="@+id/overview"
        app:layout_constraintVertical_bias="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideVerticalCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="215dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="300dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>